# mole

./: .env.example  .gitignore  API-INTEGRATIONS.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT-DOCKER.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-VERCEL.md  Dockerfile  FEATURE-DEVELOPMENT.md  GRADIENT_DESIGNS.md  IFLOW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SERVER-DEPLOY.md  SOP.md  build-and-push.ps1  build-and-push.sh  compare_and_merge_sources.py  config.example.json  deploy-docker.ps1  deploy-docker.sh  deploy-railway.ps1  deploy-railway.sh  deploy-vercel.ps1  deploy-vercel.sh  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.standalone.yml  final_top_8_sources.json  nginx.conf  package-lock.json  railway.dockerignore  railway.json  railway.template.json  requirements.txt  start-dev.ps1  start-dev.sh  start-simple.bat  (+10 more)
backend/: check_config.py  init_db.py  pyproject.toml  pytest.ini  requirements-vercel.txt  requirements.txt  run_tests.ps1  run_tests.sh  test_cogview.py  test_image_generation.py
backend/api/: index.py
backend/app/: main.py  types.py
backend/app/api/: __init__.py  ai_enhance.py  ai_streaming.py  analytics.py  article_images.py  articles.py  auth.py  charts.py  config.py  content_strategy.py  creator.py  health.py  hotspots.py  image_providers.py  integrations.py  multiplatform.py  news.py  observability.py  preview.py  publish.py  publish_queue.py  rss_sources.py  search.py  statistics.py  tasks.py  templates.py  unified_ai.py  unified_ai_advanced.py  wechat.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logger.py  monitoring.py  optimizer.py  performance.py  platform_image_specs.py  security.py
backend/app/models/: __init__.py  ai_provider_config.py  article.py  batch_job.py  config.py  content_strategy.py  hotspot.py  image_provider_config.py  news.py  publish_platform.py  rss_source.py  task.py  template.py  user.py  wechat.py
backend/app/services/: ai_writer.py  article_formatter.py  article_image_service.py  async_task_queue.py  cache.py  cache_service.py  chart_service.py  config_service.py  data_analysis_service.py  domestic_ai_service.py  github_service.py  hotspot_service.py  (+21 more)
backend/tests/: conftest.py  test_api.py  test_api_articles.py  test_api_news.py  test_api_statistics.py  test_image_service.py  test_models.py  test_multiplatform_service.py  test_news_fetcher_service.py  test_sensitive_words.py  test_services.py  test_services_ai_writer.py  test_services_image_service.py  test_services_news_fetcher.py  test_services_wechat_service.py  test_simple.py  test_stats_sync_service.py  test_unified_ai_service.py  test_wechat_service.py  test_wechat_style.py  test_writing_style.py
(+146 files in other folders)
